@@ -57,6 +57,10 @@
       <url>https://github.com/mebigfatguy</url>
     </contributor>
     <contributor>
+      <name>Luc Claes</name>
+      <url>https://github.com/lucclaes</url>
+    </contributor>
+    <contributor>
       <name>Dan Cojocar</name>
       <url>https://github.com/dancojocar</url>
     </contributor>
